--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -434,24 +434,33 @@
     padding-top: 5%;
     padding-bottom: 1%;
 }
+.overflow{
+    width: 50%;
+    overflow: hidden;
+}
 .sec04-pro{
     background: url('../img/provence-vill.jpg');
-    width: 50%;
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
+    transition: all 0.8s;
+}
+.sec04-pro:hover{
+    transform: scale(1.2);
 }
 .sec04-bake{
     background: url('../img/ru-bake2.jpg');
-    width: 50%;
+    width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
+    transition: all 0.8s;
 }
-.sec04-txt{
-    background: rgba(0,0,0,0.5);
+.sec04-bake:hover{
+    transform: scale(1.2);
 }
 .sec04-content-box{
     width: 100%;
@@ -463,22 +472,6 @@
     display: flex;
     padding-top: 5%;
     padding-bottom: 1%;
-}
-.sec04-pro{
-    background: url('../img/provence-vill.jpg');
-    width: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-.sec04-bake{
-    background: url('../img/ru-bake2.jpg');
-    width: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
 }
 .sec04-txt{
     background: rgba(0,0,0,0.5);
@@ -492,8 +485,8 @@
     height: 500px;
     font-family: 'GyeonggiBatang';
     letter-spacing: 3px;
+    text-decoration: underline;
 }
-
 #modal{
     display: none;
     position: fixed;
@@ -518,11 +511,15 @@
     font-size: 20px;
     padding: 20px;
     background: #fff;
+    font-family: 'GyeonggiBatang';
+    font-weight: bold;
 }
 .modal-con .con{
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.3;
     padding: 30px;
+    font-family: 'GyeonggiBatang';
+    letter-spacing: 2px;
 }
 .modal-con .close{
     display: block;
@@ -545,10 +542,7 @@
     .sec04-content{
         flex-direction: column;
     }
-    .sec04-pro{
-        width: 100%;
-    }
-    .sec04-bake{
+    .overflow{
         width: 100%;
     }
     .sec04-main h1{
