--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -658,15 +658,22 @@
     margin-bottom: 5%;
 }
 .section05-tra{
+    width: 45%;
+}
+.section05-tra p:first-child{
+    width: 100%;
+    height: 100px;
+    margin-top: 20%;
+}
+.sec05-txt{
     background: #e3e3e3;
     height: 600px;
-    width: 45%;
-    margin-top: 21%;
+    width: 100%;
     text-align: right;
     padding: 0 2.5%;
     margin-left: 5%;
 }
-.section05-tra p:last-child{
+.sec05-txt p:last-child{
     color: #121212;
     font-size: 22px;
     font-family: 'GyeonggiBatang';
@@ -675,7 +682,7 @@
     margin-top: 15%;
     text-align: center;
 }
-.section05-tra h2{
+.sec05-txt h2{
     color: #121212;
     font-size: 25px;
     font-family: 'GyeonggiBatang';
@@ -684,7 +691,7 @@
     margin-bottom: 5%;
     letter-spacing: 3px;
 }
-.section05-tra>p{
+.sec05-txt>p{
     color: #121212;
     font-size: 20px;
     font-family: 'GyeonggiBatang';
@@ -726,21 +733,27 @@
         font-size: 18px;
     }
     .section05-tra{
+        width: 100%;
+    }
+    .section05-tra p:first-child{
+        display: none;
+    }
+    .sec05-txt{
         width: 90%;
         height: 500px;
         margin: 0 auto;
         margin-bottom: 3%;
     }
-    .section05-tra h2{
+    .sec05-txt h2{
         font-size: 22px;
-        margin-top: 3%;
+        padding-top: 3%;
         margin-bottom: 3%;
         line-height: 30px;
     }
-    .section05-tra p{
+    .sec05-txt p{
         font-size: 18px;
     }
-    .section05-tra p:last-child{
+    .sec05-txt p:last-child{
         font-size: 20px;
         margin-top: 5%;
     }
@@ -756,22 +769,22 @@
         font-size: 18px;
         margin-bottom: 7%;
     }
-    .section05-tra{
+    .sec05-txt{
         width: 90%;
         height: 400px;
         margin: 0 auto;
         margin-bottom: 5%;
     }
-    .section05-tra h2{
+    .sec05-txt h2{
         font-size: 22px;
         margin-top: 3%;
         margin-bottom: 0;
     }
-    .section05-tra p{
+    .sec05-txt p{
         font-size: 16px;
         line-height: 25px;
     }
-    .section05-tra p:last-child{
+    .sec05-txt p:last-child{
         font-size: 20px;
         margin-top: 10%;
     }
@@ -780,16 +793,16 @@
     .section05-map>p{
         font-size: 17px;
     }
-    .section05-tra h2{
+    .sec05-txt h2{
         font-size: 20px;
         margin-top: 3%;
         margin-bottom: 0;
     }
-    .section05-tra p{
+    .sec05-txt p{
         font-size: 16px;
         line-height: 20px;
     }
-    .section05-tra p:last-child{
+    .sec05-txt p:last-child{
         font-size: 18px;
         margin-top: 4%;
     }
