--- a/heiry/css/style.css
+++ b/heiry/css/style.css
@@ -624,7 +624,6 @@
     }
 }
 /* section04 end */
-
 #section05{
     background: url('../img/anger2.jpg');
     width: 100%;
@@ -636,53 +635,36 @@
 .sec05-black{
     background: rgba(0,0,0,0.6);
 }
-.section05-warp{
-    width: 70%;
+.section05-main h1{
+    font-size: 40px;
+    color: #fff;
+    font-family: 'GyeonggiBatang';
+    font-weight: bold;
+    padding-top: 10%;
+    padding-bottom: 5%;
+    margin-left: 10%;
+}
+#map{
     margin: 0 auto;
-    display: flex;
 }
 .section05-map{
     width: 50%;
     margin-bottom: 5%;
 }
-#map{
+.section05-warp{
+    display: flex;
+    width: 70%;
     margin: 0 auto;
 }
-.section05-map>h1{
-    color: #fff;
-    font-size: 40px;
-    line-height: 45px;
-    font-family: 'GyeonggiBatang';
-    letter-spacing: 3px;
-    margin-top: 20%;
-    margin-bottom: 5%;
-}
 .section05-tra{
-    width: 45%;
-}
-.section05-tra p:first-child{
-    width: 100%;
-    height: 100px;
-    margin-top: 20%;
-}
-.sec05-txt{
     background: #e3e3e3;
     height: 600px;
-    width: 100%;
+    width: 45%;
     text-align: right;
     padding: 0 2.5%;
     margin-left: 5%;
 }
-.sec05-txt p:last-child{
-    color: #121212;
-    font-size: 22px;
-    font-family: 'GyeonggiBatang';
-    font-weight: bold;
-    letter-spacing: 3px;
-    margin-top: 15%;
-    text-align: center;
-}
-.sec05-txt h2{
+.section05-tra h2{
     color: #121212;
     font-size: 25px;
     font-family: 'GyeonggiBatang';
@@ -691,14 +673,22 @@
     margin-bottom: 5%;
     letter-spacing: 3px;
 }
-.sec05-txt>p{
+.section05-tra p{
     color: #121212;
     font-size: 20px;
     font-family: 'GyeonggiBatang';
     letter-spacing: 2px;
     line-height: 30px;
 }
-
+.section05-tra p:last-child{
+    color: #121212;
+    font-size: 22px;
+    font-family: 'GyeonggiBatang';
+    font-weight: bold;
+    letter-spacing: 3px;
+    margin-top: 15%;
+    text-align: center;
+}
 .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
 .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
 .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #d95050;background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
@@ -716,101 +706,79 @@
     #id{
         width: 90%;
     }
-    .section05-map>h1{
+    .section05-main>h1{
         text-align: center;
         margin-top: 13%;
         font-size: 35px;
     }
-    .section05-map-img{
-        width: 80%;
-        margin: 0 auto;
-        padding: 5%;
-        padding-top: 10%;
-    }
-    .section05-map>p{
-        text-align: center;
-        margin-bottom: 8%;
-        font-size: 18px;
-    }
     .section05-tra{
-        width: 100%;
-    }
-    .section05-tra p:first-child{
-        display: none;
-    }
-    .sec05-txt{
         width: 90%;
         height: 500px;
         margin: 0 auto;
+        margin-bottom: 5%;
     }
-    .sec05-txt h2{
+    .section05-tra h2{
         font-size: 22px;
+        padding-top: 1%;
         margin-bottom: 3%;
         line-height: 30px;
     }
-    .sec05-txt p{
+    .section05-tra p{
         font-size: 18px;
     }
-    .sec05-txt p:last-child{
+    .section05-tra p:last-child{
         font-size: 20px;
         margin-top: 5%;
     }
 }
 @media (max-width:536px){
-    .section05-map>h1{
+    .section05-main>h1{
         font-size: 30px;
     }
-    .section05-map-img{
-        width: 70%;
-    }
-    .section05-map>p{
-        font-size: 18px;
-        margin-bottom: 7%;
-    }
-    .sec05-txt{
+    .section05-tra{
         width: 90%;
         height: 500px;
         margin: 0 auto;
         margin-bottom: 5%;
     }
-    .sec05-txt h2{
+    .section05-tra h2{
         font-size: 22px;
         margin-top: 3%;
         margin-bottom: 0;
     }
-    .sec05-txt p{
+    .section05-tra p{
         font-size: 16px;
         line-height: 25px;
     }
-    .sec05-txt p:last-child{
+    .section05-tra p:last-child{
         font-size: 20px;
         margin-top: 10%;
     }
 }
 @media (max-width:376px){
-    .section05-map>p{
-        font-size: 17px;
-    }
-    .sec05-txt{
+    .section05-tra{
         width: 90%;
         height: 400px;
         margin: 0 auto;
         margin-bottom: 5%;
     }
-    .sec05-txt h2{
+    .section05-tra h2{
         font-size: 20px;
         margin-top: 3%;
         margin-bottom: 0;
     }
-    .sec05-txt p{
+    .section05-tra p{
         font-size: 16px;
         line-height: 20px;
     }
-    .sec05-txt p:last-child{
+    .section05-tra p:last-child{
         font-size: 18px;
         margin-top: 4%;
     }
 }
+/* section05 end */
+
+
 footer{
     width: 100%;
     background-color: #555;
